# typecmd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry-publish.yml
typecmd/: commands.py  yaml2json.py
