[tool.poetry]
name = "typecmd"
version = "0.1.0"
description = "Test for typer"
authors = ["telesoho <telesoho@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
typecmd = "typecmd.commands:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
pipx = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
