[tool.poetry]
name = "typecmd"
version = "1.0.0"
description = "Command toolset used in my work"
authors = ["telesoho <telesoho@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
yaml2json = "typecmd.yaml2json:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
pipx = "^1.2.0"
pyyaml = "^6.0"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
